got rid of a lot of experimental code now that I have decided upon a direction